# python-project-83

./: .env_example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
 page_analyzer/: __init__.py  app.py  db.py
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  db.py  html.py  url.py  urls.html  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  templates.rar  urls.html  urls_id.html
