[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyze"
authors = ["Cvilev Andrey <CvilevAS@mail.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
gunicorn = "20.1.0"


[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
validators = "^0.22.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
